; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_lport.c_bfa_fcs_vport_do_fdisc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_lport.c_bfa_fcs_vport_do_fdisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcs_vport_s = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_fcs_vport_s*)* @bfa_fcs_vport_do_fdisc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_fcs_vport_do_fdisc(%struct.bfa_fcs_vport_s* %0) #0 {
  %2 = alloca %struct.bfa_fcs_vport_s*, align 8
  store %struct.bfa_fcs_vport_s* %0, %struct.bfa_fcs_vport_s** %2, align 8
  %3 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %4 = getelementptr inbounds %struct.bfa_fcs_vport_s, %struct.bfa_fcs_vport_s* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %7 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %8 = call i32 @__vport_bfa(%struct.bfa_fcs_vport_s* %7)
  %9 = call i32 @bfa_fcport_get_maxfrsize(i32 %8)
  %10 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %11 = call i32 @__vport_pwwn(%struct.bfa_fcs_vport_s* %10)
  %12 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %13 = call i32 @__vport_nwwn(%struct.bfa_fcs_vport_s* %12)
  %14 = call i32 @bfa_lps_fdisc(i32 %5, %struct.bfa_fcs_vport_s* %6, i32 %9, i32 %11, i32 %13)
  %15 = load %struct.bfa_fcs_vport_s*, %struct.bfa_fcs_vport_s** %2, align 8
  %16 = getelementptr inbounds %struct.bfa_fcs_vport_s, %struct.bfa_fcs_vport_s* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  ret void
}

declare dso_local i32 @bfa_lps_fdisc(i32, %struct.bfa_fcs_vport_s*, i32, i32, i32) #1

declare dso_local i32 @bfa_fcport_get_maxfrsize(i32) #1

declare dso_local i32 @__vport_bfa(%struct.bfa_fcs_vport_s*) #1

declare dso_local i32 @__vport_pwwn(%struct.bfa_fcs_vport_s*) #1

declare dso_local i32 @__vport_nwwn(%struct.bfa_fcs_vport_s*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
